src/objects/SomTv_Verkaeuferzuordnung__c.object
<CustomObject>
    <fields>
        <fullName>DWH_Agentur_ProRexID__c</fullName>
        <formula>SomTv_KdAgenturBeziehung__r.DWH_AgenturProRexID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWH Agentur ProRexID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Kunden_ProRexID__c</fullName>
        <formula>SomTv_KdAgenturBeziehung__r.DWH_KundenProRexID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWH Kunden ProRexID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Verk_ufer_ProRexId__c</fullName>
        <formula>SomTv_Verkaeufer__r.ProRexId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWH Verkäufer ProRexId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_GueltigBis__c</fullName>
        <label>gültig bis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_GueltigVon__c</fullName>
        <label>gültig von</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_KdAgenturBeziehung__c</fullName>
        <label>Kd-Agentur Beziehung</label>
        <referenceTo>SomTv_KundeAgenturBeziehung__c</referenceTo>
        <relationshipLabel>Verkäuferzuordnungen</relationshipLabel>
        <relationshipName>Verkaeuferzuordnungen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SomTv_Lfd_Nr__c</fullName>
        <description>Laufende Nummer für DWH</description>
        <inlineHelpText>Laufende Nummer für DWH</inlineHelpText>
        <label>SomTv Lfd Nr</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SomTv_TvKundenverkaeuferRelevant__c</fullName>
        <description>relevant für TV_Kundenverkäufer-Rolle im AccountTeam:
a) Gültig
b) Rolle=TV_Kundenverkäufer
c) an relevanter Beziehung
d) aktiver Benutzer</description>
        <formula>TEXT(SomTv_Verkaeuferrolle__c) = &apos;TV_Kundenverkäufer&apos;
&amp;&amp;
SomTv_GueltigVon__c &lt;= TODAY() &amp;&amp; (SomTv_GueltigBis__c &gt;= TODAY() ||  ISBLANK(SomTv_GueltigBis__c) )
&amp;&amp;
SomTv_KdAgenturBeziehung__r.SomTv_RelevanteBeziehung__c = true
&amp;&amp;
SomTv_Verkaeufer__r.IsActive = true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>relevant für TV_Kundenverkäufer-Rolle im AccountTeam:
a) Gültig
b) Rolle=TV_Kundenverkäufer
c) an relevanter Beziehung
d) aktiver Benutzer</inlineHelpText>
        <label>TV-Kundenverkäufer relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_Verkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Verkaeuferzuordnungen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Verkaeuferrolle__c</fullName>
        <label>Verkäuferrolle</label>
        <picklist>
            <picklistValues>
                <fullName>TV_Einkaufsagenturverkäufer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV_Kundenverkäufer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV_Leadverkäufer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV_Planungsagenturverkäufer</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_VerkaeuferzuordnungNr__c</fullName>
        <description>DWH Verkäuferrollen: 
1 = TV_ Kundenverkäufer
2 = TV_Einkaufsagenturverkäufer
3 = TV_Planungsagenturverkäufer
4 = TV_Leadverkäufer (formerly: Verkaufsdirektor)</description>
        <formula>CASE(Text(SomTv_Verkaeuferrolle__c) , &quot;TV_Kundenverkäufer&quot;, 1, &quot;TV_Einkaufsagenturverkäufer&quot;, 2, &quot;TV_Planungsagenturverkäufer&quot;, 3, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1 = TV_ Kundenverkäufer 
2 = TV_Einkaufsagenturverkäufer 
3 = TV_Planungsagenturverkäufer 
4 = TV_Leadverkäufer (formerly: Verkaufsdirektor)</inlineHelpText>
        <label>VerkäuferzuordnungNr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Verkäuferzuordnung</label>
    <nameField>
        <displayFormat>VKZ-{0}</displayFormat>
        <label>Verkäuferzuordnung-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verkäuferzuordnungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SomTv_GueltigkeitInBeziehungsgueltigkeit</fullName>
        <active>true</active>
        <description>Prüft, ob die Gültigkeit der Verkäuferzuordnung innerhalb der Gültigkeit der Beziehung liegt</description>
        <errorConditionFormula>SomTv_GueltigBis__c &gt; SomTv_KdAgenturBeziehung__r.GueltigBis__c  || 
SomTv_GueltigBis__c &lt;  SomTv_KdAgenturBeziehung__r.GueltigVon__c  || 
SomTv_GueltigVon__c  &lt; SomTv_KdAgenturBeziehung__r.GueltigVon__c  || 
SomTv_GueltigVon__c &gt; SomTv_KdAgenturBeziehung__r.GueltigBis__c</errorConditionFormula>
        <errorMessage>Die Gültigkeit der Verkäuferzuordnung liegt nicht in der Gültigkeit der Beziehung.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_VerkaueferGueltigVonGueltigBis</fullName>
        <active>true</active>
        <description>&quot;Gültig von&quot; darf nicht größer &quot;Gültig bis&quot; sein</description>
        <errorConditionFormula>SomTv_GueltigVon__c &gt; SomTv_GueltigBis__c</errorConditionFormula>
        <errorDisplayField>SomTv_GueltigVon__c</errorDisplayField>
        <errorMessage>&quot;Gültig von&quot; darf nicht größer &quot;Gültig bis&quot; sein</errorMessage>
    </validationRules>
</CustomObject>